--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,8 @@ jobs:
           command: |
             git config --global user.email "bh4aws@163.com"
             git config --global user.name "bh4aws@163.com"
-            echo "machine github.com login"
-            GIT_USER=bh4aws@163.com USE_SSH=true npm run start
+            echo "machine github.com login bh4aws@163.com password $GITHUB_TOKEN" > ~/.netrc
+            npm install && GIT_USER=bh4aws@163.com npm run publish-gh-pages
 
 workflows:
   # Below is the definition of your workflow.
