--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             git config --global user.email "bh4aws@163.com"
             git config --global user.name "bh4aws@163.com"
             echo "machine github.com login bh4aws@163.com password $GITHUB_TOKEN" > ~/.netrc
-            npm install && GIT_USER=bh4aws@163.com npm deploy
+            npm install && GIT_USER=bh4aws@163.com npm run deploy
 workflows:
   sample:
     jobs:
