--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,10 @@ jobs:
   build-and-test:
     docker:
       - image: cimg/node:16.10
+    filters:
+      branches:
+        only:
+        - master
     steps:
       - checkout
       - run:
